2006-05-29 Mikhail Khodjaiants
	Bug 144277: No images for source containers types (temporary fix).
	* SourceContainerLabelProvider.java

2006-05-24 Mikhail Khodjaiants
	Bug 143593: Module's children are not expandable.
	* CDebugElementAdapterFactory.java
	* CDebugUIPlugin.java

2006-05-19 Mikhail Khodjaiants
	Bug 142860: Breakpoint marker is not shown in the editor's ruler.
	* ToggleBreakpointAdapter.java
	* plugin.properties
	* plugin.xml

2006-05-12 Mikhail Khodjaiants
	Bug 118274: Condition is not shown in the tooltip of conditional breakpoint.
	Moved the "getBreakpointText" method and related methods to CDebugUtils.
	* CDebugModelPresentation.java
	* CDebugUIMessages.properties

2006-05-12 Mikhail Khodjaiants
	Bug 109449: Sort globals in "Add Globals" dialog.
	* AddGlobalsActionDelegate.java

2006-04-17 Mikhail Khodjaiants
	Added the "AddWatchpoint" action to the breakpoints view.
	* AddWatchpointActionDelegate.java
	* plugin.properties
	* plugin.xml

2006-04-05 Mikhail Khodjaiants
	Bug 135118: Modules view is not updated.
	* ModuleProxyFactory.java
	* ModulesViewEventHandler.java
	* ModulesViewModelProxy.java

2006-04-05 Mikhail Khodjaiants
	Corrected the shared library image selection.
	* CDebugImages.java
	* CDebugModelPresentation.java
	- icons/ovr16/symbols_ovr.gif

2006-04-04 Mikhail Khodjaiants
	See bug 134871: StackOverflowError using AsynchronousViewer.
	* ModulesView.java
	
2006-04-04 Mikhail Khodjaiants
	Complying with Eclipse 3.2 M6. AsynchronousTreeModelViewer has been renamed to AsynchronousTreeViewer.
	* AbstractViewerState.java
	* ModulesViewer.java
	* ModulesViewerState.java

2006-03-29 Mikhail Khodjaiants
	Allow clients to contribute IRestart adapters.
	* RestartActionDelegate.java

2006-03-15 Mikhail Khodjaiants
	An ICDebuggerPage adapter is added to retain compatibility with old extensions.
	+ CDebuggerPageAdapter.java
	* CDebugUIPlugin.java

2006-03-06 Mikhail Khodjaiants